--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,8 @@ body {
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 
-
+<a href="https://github.com/LorenaEberhart/EIA2" target="_blank">Repository</a> 
+<a href="https://lorenaeberhart.github.io" target="_blank">Userpage</a>
+<a href="https://sftp.hs-furtwangen.de/~del/EIA2/" target="_blank">Miniseite</a>
 </body>
 </html>
