--- a/Aufgabe 0/Aufgabe0.html
+++ b/Aufgabe 0/Aufgabe0.html
@@ -2,7 +2,7 @@
 Aufgabe: Aufgabe 0 - Start: Git, Github und Pages
 Name: Lorena Eberhart
 Matrikel: 256328
-Datum: 10.10.17
+Datum: 11.10.17
 	
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. 
 Er wurde nicht kopiert und auch nicht diktiert.
@@ -18,7 +18,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script language = "javascript" type = "text/javascript" src="Aufgabe0.js">
 </script>
 </head>
-<body>
+<body onload="hallo()">
 <p id="test"> </p>
 </body>
 
