--- a/Aufgabe 0/Aufgabe0.html
+++ b/Aufgabe 0/Aufgabe0.html
@@ -18,8 +18,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script language = "javascript" type = "text/javascript" src="Aufgabe0.js">
 </script>
 </head>
-<body onload="hallo()">
-<p id="test"> </p>
+<body>
 </body>
 
 
