--- a/Aufgabe 1/Aufgabe1.html
+++ b/Aufgabe 1/Aufgabe1.html
@@ -2,7 +2,7 @@
 Aufgabe: Aufgabe 1 - Canvas: Skipiste
 Name: Lorena Eberhart
 Matrikel: 256328
-Datum: 11.10.17
+Datum: 13.10.17
 	
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. 
 Er wurde nicht kopiert und auch nicht diktiert.
@@ -15,8 +15,8 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <head> 
 <meta charset="UTF-8">
 <title>Aufgabe 1</title>
-<script language = "javascript" type = "text/javascript" src="Aufgabe1.js">
-</script>
+<script language = "javascript" type = "text/javascript" src="Aufgabe1.js"> </script>
+<link rel="stylesheet" type="text/css" href="Aufgabe1.css">
 </head>
 <body>
 <canvas width="800" height="600"> </canvas>
