--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,10 @@ body {
 </style>
 </head>
 <body>
+	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe1/Aufgabe1.html" target="_blank"> Aufgabe 1, 13.10.17</a>
 <br>
 <a href="https://github.com/LorenaEberhart/EIA2" target="_blank">Repository</a> 
 <a href="https://lorenaeberhart.github.io" target="_blank">Userpage</a>
