--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -19,7 +19,7 @@ body {
 <br>
 <a href="https://github.com/LorenaEberhart/EIA2" target="_blank">Repository</a> 
 <a href="https://lorenaeberhart.github.io" target="_blank">Userpage</a>
-<a href="https://sftp.hs-furtwangen.de/~del/EIA2/" target="_blank">Miniseite</a>
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe0/Aufgabe0.html" target="_blank">Miniseite</a>
 
 </body>
 </html>
