--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -18,7 +18,7 @@ body {
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe1/Aufgabe1.html" target="_blank"> Aufgabe 1, 13.10.17</a>
 <br>
 <a href="https://github.com/LorenaEberhart/EIA2" target="_blank">Repository</a> 
-<a href="https://lorenaeberhart.github.io" target="_blank">Userpage</a>
+<a href="https://lorenaeberhart.github.io/EIA2/index.html" target="_blank">Userpage</a>
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe0/Aufgabe0.html" target="_blank">Miniseite</a>
 
 </body>
