--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,7 +14,11 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-
+<!-- Aufgabe2 -->
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe2/Aufgabe2.html" target="_blank"> Aufgabe 2, 20.10,.17</a>
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe2/Konzept%20Aufgabe2.JPG" target="_blank"> Konzept A2, 20.10.17</a>
+<br>
+<!-- Aufgabe1 -->
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe1/Aufgabe1.html" target="_blank"> Aufgabe 1, 13.10.17</a>
 <br>
 <a href="https://github.com/LorenaEberhart/EIA2" target="_blank">Repository</a> 
