--- a/Website/website.html
+++ b/Website/website.html
@@ -1,5 +1,5 @@
-
-<!--Aufgabe: Semesteraufgabe - Persönliches Online Portfolio
+<!-- 
+Aufgabe: Semesteraufgabe - Persönliches Online Portfolio
 Name: Lorena Eberhart
 Matrikel: 256328
 Datum: 19.07.17
@@ -75,7 +75,7 @@ nicht kopiert und auch nicht diktiert.
 
 		<div>
 			<img src="imgs/shop.PNG" class="BildBox2">
-			<img src="imgs/LoE.JPG" class="BildBox2">
+			<img src="imgs/skipiste.png" class="BildBox2">
 			<img src="imgs/MK.PNG" class="BildBox2">
 			<img src="imgs/mensch.PNG" class="BildBox2">
 
@@ -89,20 +89,7 @@ nicht kopiert und auch nicht diktiert.
 		<h2 id="Fotografie">Fotografie</h2>
 		
 		<div id="content">
-		<!-- 
-			<img src="imgs/eins.JPG" class="BildBox3">
-			<img src="imgs/zwei.JPG" class="BildBox3">
-			<img src="imgs/drei.JPG" class="BildBox3">
-			<img src="imgs/vier.JPG" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			<img src="imgs/platzhalter.png" class="BildBox3">
-			-->
+		
 		</div>
 	
 	</div>
