--- a/Website/website.html
+++ b/Website/website.html
@@ -58,7 +58,7 @@ nicht kopiert und auch nicht diktiert.
 	<div>
 		<h1 id="UeberMich">Über mich</h1>
 		
-		<img src="imgs/ich.JPG" id="Ich">
+		<img src="imgs/ich.jpg" id="Ich">
 		
 		<p class="BoxLinks"> 
 		Geboren wurde ich 1996 im schönen Zollernstädtchen Hechingen und lebe seither in Haigerloch. Dort habe ich 2015 am Gymnasium Haigerloch mein Abitur gemacht.
