--- a/Website/website.html
+++ b/Website/website.html
@@ -74,10 +74,10 @@ nicht kopiert und auch nicht diktiert.
 		<h2 id="Arbeiten">Arbeiten</h2>
 
 		<div>
-			<img src="imgs/shop.PNG" class="BildBox2">
+			<img src="imgs/shop.png" class="BildBox2">
 			<img src="imgs/skipiste.png" class="BildBox2">
-			<img src="imgs/MK.PNG" class="BildBox2">
-			<img src="imgs/mensch.PNG" class="BildBox2">
+			<img src="imgs/MK.png" class="BildBox2">
+			<img src="imgs/mensch.png" class="BildBox2">
 
 		</div>
 	</div>
