--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,8 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Aufgabe4 -->
+
 <!-- Aufgabe3 -->
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe3/Aufgabe3.html" target="_blank"> Aufgabe 3, 03.11.17</a>
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe3/Konzept%20A3.JPG" target="_blank"> Konzept A3, 03.11.17</a>
