--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,7 +15,9 @@ body {
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 <!-- Aufgabe4 -->
-
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe4/Aufgabe4.html" target="_blank"> Aufgabe 4, 10.11.17</a>
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe4/KonzeptA4.JPG" target="_blank"> Konzept A4, 10.11.17</a>
+<br>
 <!-- Aufgabe3 -->
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe3/Aufgabe3.html" target="_blank"> Aufgabe 3, 03.11.17</a>
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe3/Konzept%20A3.JPG" target="_blank"> Konzept A3, 03.11.17</a>
