--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,10 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Aufgabe6 -->
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe6/Aufgabe6.html" target="_blank"> Aufgabe 6, 24.11.17</a>
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe6/KonzeptA6.jpg" target="_blank"> Konzept A6, 24.11.17</a>
+<br>
 <!-- Aufgabe5 -->
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe5/Aufgabe5.html" target="_blank"> Aufgabe 5, 17.11.17</a>
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe5/KonzeptA5.jpg" target="_blank"> Konzept A5, 17.11.17</a>
