--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,11 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Aufgabe8 -->
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe8/Aufgabe8.html" target="_blank"> Aufgabe 8, 08.12.17</a>
+<a href="https://lorenaeberhart.github.io/EIA2/Aufgabe8/KonzeptA8.JPG" target="_blank"> Konzept A8, 08.12.17</a>
+
+
 <!-- Aufgabe7 -->
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe7/Aufgabe7.html" target="_blank"> Aufgabe 7, 01.12.17</a>
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe7/KonzeptA7.jpg" target="_blank"> Konzept A7, 01.12.17</a>
