--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,10 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Aufgabe10 -->
+<a href="https://lorenaeberhart.github.io/EIA2/AufgabeX/AufgabeX.html" target="_blank"> Aufgabe 10, 07.01.18</a>
+<a href="https://lorenaeberhart.github.io/EIA2/AufgabeX/KonzeptA10.pdf" target="_blank"> Konzept A10, 07.01.18</a>
+<br>
 <!-- Aufgabe9 -->
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe9/Aufgabe9.html" target="_blank"> Aufgabe 9, 15.12.17</a>
 <a href="https://lorenaeberhart.github.io/EIA2/Aufgabe9/KonzeptA9.JPG" target="_blank"> Konzept A9, 15.12.17</a>
