--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,9 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Aufgabe 11 -->
+<a href="https://lorenaeberhart.github.io/EIA2/L10_Node/FragenAufgabe11.pdf" target="_blank"> Aufgabe 11 Fragen, 14.01.18</a>
+<br>
 <!-- Aufgabe10 -->
 <a href="https://lorenaeberhart.github.io/EIA2/AufgabeX/AufgabeX.html" target="_blank"> Aufgabe 10, 07.01.18</a>
 <a href="https://lorenaeberhart.github.io/EIA2/AufgabeX/KonzeptA10.pdf" target="_blank"> Konzept A10, 07.01.18</a>
