--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,9 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Aufgabe 12 -->
+<a href="https://mongodbrowser.herokuapp.com/?u=lorena&p=1234&a=ds263367.mlab.com:63367/datenbank&n=datenbank&c=Bauernhof" target="_blank"> Aufgabe 12, 21.01.18</a>
+<br>
 <!-- Aufgabe 11 -->
 <a href="https://lorenaeberhart.github.io/EIA2/L10_Node/FragenAufgabe11.pdf" target="_blank"> Aufgabe 11 Fragen, 14.01.18</a>
 <br>
