--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -21,6 +21,7 @@ body {
 <a href="https://lorenaeberhart.github.io/EIA2/L10_Node/FragenAufgabe11.pdf" target="_blank"> Aufgabe 11 Fragen, 14.01.18</a>
 <br>
 <!-- Aufgabe10 -->
+<a href="https://lorenaeberhart.github.io/EIA2/A10_Neu/Konfigurator.html" target="_blank"> Aufgabe 10 Warenkorb</a>
 <a href="https://lorenaeberhart.github.io/EIA2/AufgabeX/AufgabeX.html" target="_blank"> Aufgabe 10, 07.01.18</a>
 <a href="https://lorenaeberhart.github.io/EIA2/AufgabeX/KonzeptA10.pdf" target="_blank"> Konzept A10, 07.01.18</a>
 <br>
