--- a/A10_Neu/Konfigurator.html
+++ b/A10_Neu/Konfigurator.html
@@ -8,6 +8,8 @@
 <script src="daten.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
+		<form action="https://eberhart.herokuapp.com/" method="get">
+
 	<h1>Weihnachtsbaum Konfigurator</h1>
 	<fieldset style="background-color: #b6b6ce">
 		<legend>Baumtyp</legend>
@@ -38,5 +40,7 @@
 	<div id="prufenbutton"></div>
 
 	<div id="korbid"></div>
+	
+	</form>
 </body>
 </html>
