--- a/A10_Neu/Konfigurator.html
+++ b/A10_Neu/Konfigurator.html
@@ -8,7 +8,7 @@
 <script src="daten.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-		<form action="https://eberhart.herokuapp.com/" method="get">
+		<form action="https://node-code-aufgabe11.herokuapp.com/" method="get">
 
 	<h1>Weihnachtsbaum Konfigurator</h1>
 	<fieldset style="background-color: #b6b6ce">
