Abschluss weitere versuche

--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -15,7 +15,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Abschlussaufgabe</title>
+<title>Let's built some new friendships</title>
 <script language="javascript" type="text/javascript" src="Superclass.js"> </script>
 <script language="javascript" type="text/javascript" src="Gambia.js"> </script>
 <script language="javascript" type="text/javascript" src="CostaRica.js"> </script>
@@ -26,7 +26,14 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <link rel="stylesheet" type="text/css" href="Stylesheet.css">
 </head>
 <body>
+	<h1>Let´s built some new friendships!</h1>
 	<canvas width="800" height="600"> </canvas>
+	
+	<div id="Germany"> </div>
+	<div id="Columbia"></div>
+	<div id="Japan"></div>
+	<div id="CostaRica"></div>
+	<div id="Gambia"></div>
 </body>
 
 
