--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -16,12 +16,14 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <head>
 <meta charset="UTF-8">
 <title>Let's built some new friendships</title>
+
 <script language="javascript" type="text/javascript" src="Superclass.js"> </script>
 <script language="javascript" type="text/javascript" src="Gambia.js"> </script>
 <script language="javascript" type="text/javascript" src="CostaRica.js"> </script>
 <script language="javascript" type="text/javascript" src="Japan.js"> </script>
 <script language="javascript" type="text/javascript" src="Columbia.js"> </script>
 <script language="javascript" type="text/javascript" src="Germany.js"> </script>
+<script language="javascript" type="text/javascript" src="Konfetti.js"> </script>
 <script language="javascript" type="text/javascript" src="Main.js"> </script>
 <link rel="stylesheet" type="text/css" href="Stylesheet.css">
 </head>
@@ -34,6 +36,9 @@ Er wurde nicht kopiert und auch nicht diktiert.
 	<div id="Japan"></div>
 	<div id="CostaRica"></div>
 	<div id="Gambia"></div>
+	
+	<a href="javascript:sound()" id="soundbox"></a>
+	
 </body>
 
 
