--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -15,7 +15,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Let's built some new friendships</title>
+<title>Let's build some new friendships</title>
 
 <script language="javascript" type="text/javascript" src="Superclass.js"> </script>
 <script language="javascript" type="text/javascript" src="Gambia.js"> </script>
@@ -28,8 +28,8 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <link rel="stylesheet" type="text/css" href="Stylesheet.css">
 </head>
 <body>
-	<h1>Let´s built some new friendships!</h1>
-	<canvas width="800" height="600"> </canvas>
+	<h1>Let´s build some new friendships!</h1>
+	<canvas id="canvas" width="800" height="600"> </canvas>
 	
 	<div id="Germany"> </div>
 	<div id="Columbia"></div>
@@ -37,7 +37,9 @@ Er wurde nicht kopiert und auch nicht diktiert.
 	<div id="CostaRica"></div>
 	<div id="Gambia"></div>
 	
-	<a href="javascript:sound()" id="soundbox"></a>
+	
+	
+	<!--  <a href="javascript:sound()" id="soundbox"></a> -->
 	
 </body>
 
