--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -28,7 +28,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <link rel="stylesheet" type="text/css" href="Stylesheet.css">
 </head>
 <body>
-	<h1>Let´s build some new friendships!</h1>
+	<h1>Help Germany to built new friendships!</h1>
 	<canvas id="canvas" width="800" height="600"> </canvas>
 	
 	<div id="Germany"> </div>
