--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -39,7 +39,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 	
 	
 	
-	<!--  <a href="javascript:sound()" id="soundbox"></a> -->
+	<h3>Turn on the volume for better experience:)</h3>
 	
 </body>
 
