--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -2,7 +2,7 @@
 Aufgabe: Abschlussaufgabe
 Name: Lorena Eberhart
 Matrikel: 256328
-Datum: 13.10.17
+Datum: 23.02.18
 	
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. 
 Er wurde nicht kopiert und auch nicht diktiert.
@@ -26,6 +26,9 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <script language="javascript" type="text/javascript" src="Konfetti.js"> </script>
 <script language="javascript" type="text/javascript" src="Main.js"> </script>
 <link rel="stylesheet" type="text/css" href="Stylesheet.css">
+<style>
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+</style>
 </head>
 <body>
 	<h1>Help Germany to build new friendships!</h1>
