--- a/Abschlussaufgabe/Abschluss.html
+++ b/Abschlussaufgabe/Abschluss.html
@@ -28,6 +28,7 @@ Er wurde nicht kopiert und auch nicht diktiert.
 <link rel="stylesheet" type="text/css" href="Stylesheet.css">
 <style>
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+@import url('https://fonts.googleapis.com/css?family=Kavivanar');
 </style>
 </head>
 <body>
