--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,10 @@ body {
 <body>
 	
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<!-- Abschlussaufgabe -->
+<a href="https://lorenaeberhart.github.io/EIA2/Abschlussaufgabe/Abschluss.html" target="_blank"> Abschlussaufgabe 23.02.18</a>
+<a href="https://lorenaeberhart.github.io/EIA2/Abschlussaufgabe/ArchivEIA2LorenaEberhart.zip" target="_blank">Archiv</a>
+<br>
 <!-- Aufgabe 12 -->
 <a href="https://mongodbrowser.herokuapp.com/?u=lorena&p=1234&a=ds263367.mlab.com:63367/datenbank&n=datenbank&c=Bauernhof" target="_blank"> Aufgabe 12, 21.01.18</a>
 <br>
